# MNE_Vision

./: .gitattributes  Dockerfile  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
docs/: api.rst  conf.py  index.rst  src.classification.rst  src.connectivity.envelope_correlation.rst  src.connectivity.source_space_connectivity.rst  src.connectivity.spectro_temporal_connectivity.rst  src.edit.channel_location.rst  src.edit.event_values.rst  src.exceptions.rst  src.file.find_events_from_channel.rst  src.file.rst  src.file.study_creation.rst  src.menubar.rst  src.plots.erp.rst  src.plots.erp_image.rst  src.plots.rst  src.plots.time_frequency_ersp_itc.rst  src.runnables.rst  src.statistics.rst  src.statistics.statistics_connectivity.rst  src.statistics.statistics_psd.rst  src.statistics.statistics_snr.rst  src.study.rst  src.tools.ICA_decomposition.rst  src.tools.extract_epochs.rst  src.tools.re_referencing.rst  src.tools.rst  src.tools.signal_to_noise_ratio.rst  src.utils.cnt_reader.libeep.rst  src.utils.cnt_reader.rst  src.utils.download_fsaverage_mne_data.rst  src.utils.elements_selector.rst  src.utils.rst  tutorial.rst
lib/applePy/: channel_selection.py  channel_selection_without_covariances.py  classifier.py  cnn.py  pipeline_catalogue.py  sources_estimator.py  tools.py  transformer.py
lib/libeep/: AUTHORS  CMakeLists.txt  installer.nsi.in  libeep.pc.in  makefile  pytest.ini  readme.bup  readme.md  setup.py  v4.doxyfile
lib/libeep/java/: CMakeLists.txt  libeep-jni.cc
lib/libeep/java/com/antneuro/: libeep.java
lib/libeep/mex/eeglab/: eegplugin_eepimport.m  pop_loadeep_v4.m
lib/libeep/mex/matlab/: eepv4_read.c  eepv4_read_info.c  eepv4_version.c  read_eep_avr.c  read_eep_cnt.c  write_eep_avr.c  write_eep_cnt.c
lib/libeep/pytests/: test_libeep.py
lib/libeep/python/: __init__.py  demo_read_cnt.py  demo_write_cnt.py  oldeep.py  pyeep.c
lib/libeep/python/v2/: CMakeLists.txt
lib/libeep/python/v3/: CMakeLists.txt
lib/libeep/src/avr/: avr.h  avrcfg.h
lib/libeep/src/cnt/: cnt.h  cnt_private.h  cnt_version.h  cntutils.h  evt.h  raw3.h  rej.h  riff.h  riff64.h  seg.h  trg.h
lib/libeep/src/eep/: eepio.h  eepmem.h  eepmisc.h  eepraw.h  inttypes.h  stdint.h  val.h  var_string.h  winsafe.h
lib/libeep/src/libavr/: avr.c  avrcfg.c
lib/libeep/src/libcnt/: cnt.c  cntutils.c  evt.c  raw3.c  rej.c  riff.c  riff64.c  seg.c  trg.c
lib/libeep/src/libeep/: eepio.c  eepmem.c  eepmisc.c  eepraw.c  val.c  var_string.c
lib/libeep/src/v4/: eep.c  eep.h
lib/libeep/test/: ReadCNT.java  WriteCNT.java  demo_read_avr.c  demo_read_cnt.c  demo_read_evt.c  demo_read_seg.c  demo_v4_read_cnt.c  demo_v4_write_cnt.c  demo_write_avr.c  demo_write_cnt.c  libeep_info.c
lib/libeep/windows/: Eep.def
mne_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: main.py  main.spec  main_controller.py  main_listener.py  main_model.py  main_view.py
src/classification/applePy/: channel_selection.py  channel_selection_without_covariances.py  classifier.py  cnn.py  pipeline_catalogue.py  saver.py  sources_estimator.py  tools.py  transformer.py
src/classification/classify/: classify_controller.py  classify_listener.py  classify_view.py
src/connectivity/connectivity/: connectivity_controller.py  connectivity_listener.py  connectivity_view.py
src/connectivity/envelope_correlation/: envelope_correlation_controller.py  envelope_correlation_listener.py  envelope_correlation_view.py
src/connectivity/sensor_space_connectivity/: sensor_space_connectivity_controller.py  sensor_space_connectivity_listener.py  sensor_space_connectivity_view.py  spectral_connectivity_controller.py  spectral_connectivity_listener.py  spectral_connectivity_view.py
src/connectivity/source_space_connectivity/: source_space_connectivity_controller.py  source_space_connectivity_listener.py  source_space_connectivity_view.py
src/connectivity/spectral_connectivity/: spectral_connectivity_controller.py  spectral_connectivity_listener.py  spectral_connectivity_view.py
src/connectivity/spectro_temporal_connectivity/: spectro_temporal_connectivity_controller.py  spectro_temporal_connectivity_listener.py  spectro_temporal_connectivity_view.py
src/connectivity/temporal_connectivity/: temporal_connectivity_controller.py  temporal_connectivity_listener.py  temporal_connectivity_view.py
src/edit/channel_location/: channel_location_controller.py  channel_location_listener.py  channel_location_view.py
src/edit/dataset_info/: dataset_info_controller.py  dataset_info_listener.py  dataset_info_view.py
src/edit/event_values/: event_values_controller.py  event_values_listener.py  event_values_view.py
src/exceptions/: exceptions.py
src/file/find_events_from_channel/: find_events_from_channel_controller.py  find_events_from_channel_listener.py  find_events_from_channel_view.py
src/file/load_data_info/: load_data_info_controller.py  load_data_info_listener.py  load_data_info_view.py
src/file/study_creation/: study_creation_controller.py  study_creation_listener.py  study_creation_view.py
src/menubar/: menubar_controller.py  menubar_listener.py  menubar_view.py
src/plots/erp/: erp_controller.py  erp_listener.py  erp_view.py
src/plots/erp_image/: erp_image_controller.py  erp_image_listener.py  erp_image_view.py
src/plots/power_spectral_density/: power_spectral_density_controller.py  power_spectral_density_listener.py  power_spectral_density_view.py
src/plots/time_frequency_ersp_itc/: time_frequency_ersp_itc_controller.py  time_frequency_ersp_itc_listener.py  time_frequency_ersp_itc_view.py
src/plots/topographies/: topographies_controller.py  topographies_listener.py  topographies_view.py
src/runnables/: classification_runnable.py  connectivity_runnable.py  files_runnable.py  plots_runnable.py  statistics_runnable.py  study_runnable.py  tools_runnable.py  utils_runnable.py
src/study/study_edit_info/: study_edit_info_view.py  (+2 more)
src/utils/: cnt_file_reader.py  error_window.py  file_path_search.py  progress_bar.py  splash_screen.py  stylesheet.py
(+95 files in other folders)
