[metadata]
name = mne_vision
version = 0.0.1
author = Lemahieu Antoine
author_email = Antoine.Lemahieu@ulb.be
description = MNE Vision is a GUI for MNE
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = EEG, MNE, GUI
url = https://github.com/alemahie/MNE_Vision
project_urls =
    Bug Tracker = https://github.com/alemahie/MNE_Vision/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    eeglabio>=0.0.1.post7
	keras>=2.9.0
	matplotlib>=3.5.2
	mne>=1.0.3
	mne_connectivity>=0.3
	numpy>=1.22.4
	pymatreader>=0.0.30
	PyQt5>=5.15.6
	PyQt5-stubs>=5.15.6.0
	pyriemann>=0.2.7
	pyvista>=0.34.1
	pyvistaqt>=0.9.0
	scikit_learn>=1.1.1
	scipy>=1.8.1
	seaborn>=0.11.2
	tensorflow>=2.9.1

[options.entry_points]
gui_scripts =
    mne_vision = mne_vision:main
