find_package(Python2 COMPONENTS Development)
if(Python2_FOUND) 
  message("python 2 include.... ${Python2_INCLUDE_DIRS}")
  message("python 2 libs....... ${Python2_LIBRARIES}")
  add_library(pyeep2 MODULE ../pyeep.c)
  set_target_properties(pyeep2 PROPERTIES OUTPUT_NAME pyeep)
  target_include_directories(pyeep2 PRIVATE ${Python2_INCLUDE_DIRS})
  target_link_libraries(pyeep2 PRIVATE EepStatic)
  target_link_libraries(pyeep2 PRIVATE ${Python2_LIBRARIES})
  install(FILES ../__init__.py DESTINATION share/libeep/python2/libeep)
  install(TARGETS pyeep2 DESTINATION share/libeep/python2/libeep)

  if(UNIX)
    set_target_properties(pyeep2 PROPERTIES PREFIX "")
  endif()
  if(WIN32)
    set_target_properties(pyeep2 PROPERTIES SUFFIX .pyd)
  endif()
endif()
