find_package(Python3 COMPONENTS Development)
if(Python3_FOUND) 
  message("python 3 include.... ${Python3_INCLUDE_DIRS}")
  message("python 3 libs....... ${Python3_LIBRARIES}")
  add_library(pyeep3 MODULE ../pyeep.c)
  set_target_properties(pyeep3 PROPERTIES OUTPUT_NAME pyeep)
  target_include_directories(pyeep3 PRIVATE ${Python3_INCLUDE_DIRS})
  target_link_libraries(pyeep3 PRIVATE EepStatic)
  target_link_libraries(pyeep3 PRIVATE ${Python3_LIBRARIES})
  install(FILES ../__init__.py DESTINATION share/libeep/python3/libeep)
  install(TARGETS pyeep3 DESTINATION share/libeep/python3/libeep)

  if(UNIX)
    set_target_properties(pyeep3 PROPERTIES PREFIX "")
  endif()
  if(WIN32)
    set_target_properties(pyeep3 PROPERTIES SUFFIX .pyd)
  endif()
endif()
